[gd_scene load_steps=24 format=3 uid="uid://lsn6qrjnqq6k"]

[ext_resource type="Script" path="res://Scripts/turret_2.gd" id="1_m12lv"]
[ext_resource type="Texture2D" uid="uid://d031swqxd4krq" path="res://Sprites/Tower_Fedora_idle-Sheet.png" id="1_w2hja"]
[ext_resource type="Texture2D" uid="uid://c8k8euqo2jqrs" path="res://Sprites/Tower_Fedora_Attack.png" id="2_ig8v8"]
[ext_resource type="Script" path="res://Scripts/upgradeMenu.gd" id="4_6q5pt"]
[ext_resource type="AudioStream" uid="uid://cnpa1x1d1r35n" path="res://SFX/ButtonClick.ogg" id="4_hldvi"]
[ext_resource type="Theme" uid="uid://bgwe8p2ywbw8c" path="res://Scenes/tabcontainer.tres" id="4_j16co"]
[ext_resource type="Theme" uid="uid://c0nhulr6kv22l" path="res://Scenes/tab_buttons.tres" id="5_c1o5e"]
[ext_resource type="Theme" uid="uid://be6xefjemk1at" path="res://Scenes/sell_button.tres" id="6_c242q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_djca4"]
radius = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vr76t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tuwco"]
atlas = ExtResource("2_ig8v8")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4nax"]
atlas = ExtResource("2_ig8v8")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1vbc"]
atlas = ExtResource("2_ig8v8")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbodg"]
atlas = ExtResource("1_w2hja")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_afg46"]
atlas = ExtResource("1_w2hja")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c16ic"]
atlas = ExtResource("1_w2hja")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vao0r"]
atlas = ExtResource("1_w2hja")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6ntv"]
atlas = ExtResource("1_w2hja")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8hgv"]
atlas = ExtResource("1_w2hja")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m57wn"]
atlas = ExtResource("1_w2hja")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2dl5"]
atlas = ExtResource("1_w2hja")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rp6vl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuwco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4nax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1vbc")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbodg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afg46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c16ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vao0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6ntv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8hgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m57wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2dl5")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eypwa"]

[node name="Turret2" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
input_pickable = true
script = ExtResource("1_m12lv")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_djca4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vr76t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rp6vl")
animation = &"attack"
frame = 2
frame_progress = 1.0

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="Turret" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turret"]
shape = SubResource("RectangleShape2D_eypwa")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["SFX"]]

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 244.0
offset_bottom = 150.0
script = ExtResource("4_6q5pt")

[node name="TabContainer" type="TabContainer" parent="Control"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 150.0
theme = ExtResource("4_j16co")
current_tab = 0

[node name="PATH1" type="VBoxContainer" parent="Control/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Buttons" type="HBoxContainer" parent="Control/TabContainer/PATH1"]
layout_mode = 2
alignment = 1

[node name="LVL1" type="Button" parent="Control/TabContainer/PATH1/Buttons"]
custom_minimum_size = Vector2(44, 25)
layout_mode = 2
theme = ExtResource("5_c1o5e")
text = "LVL1"

[node name="LVL2" type="Button" parent="Control/TabContainer/PATH1/Buttons"]
custom_minimum_size = Vector2(44, 25)
layout_mode = 2
theme = ExtResource("5_c1o5e")
disabled = true
text = "ðŸ”’"

[node name="LVL3" type="Button" parent="Control/TabContainer/PATH1/Buttons"]
custom_minimum_size = Vector2(44, 25)
layout_mode = 2
theme = ExtResource("5_c1o5e")
disabled = true
text = "ðŸ”’"

[node name="INFO" type="RichTextLabel" parent="Control/TabContainer/PATH1"]
layout_mode = 2
text = "This is info about the upgrade.
COST: 100MP"
fit_content = true

[node name="PATH2" type="VBoxContainer" parent="Control/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Buttons" type="HBoxContainer" parent="Control/TabContainer/PATH2"]
layout_mode = 2
alignment = 1

[node name="LVL1" type="Button" parent="Control/TabContainer/PATH2/Buttons"]
custom_minimum_size = Vector2(44, 25)
layout_mode = 2
theme = ExtResource("5_c1o5e")
text = "LVL1"

[node name="LVL2" type="Button" parent="Control/TabContainer/PATH2/Buttons"]
custom_minimum_size = Vector2(44, 25)
layout_mode = 2
theme = ExtResource("5_c1o5e")
disabled = true
text = "ðŸ”’"

[node name="LVL3" type="Button" parent="Control/TabContainer/PATH2/Buttons"]
custom_minimum_size = Vector2(44, 25)
layout_mode = 2
theme = ExtResource("5_c1o5e")
disabled = true
text = "ðŸ”’"

[node name="INFO" type="RichTextLabel" parent="Control/TabContainer/PATH2"]
layout_mode = 2
text = "This is info about the upgrade.
COST: 100MP"
fit_content = true

[node name="SellButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 200.0
offset_top = 29.0
offset_right = 245.0
offset_bottom = 150.0
theme = ExtResource("6_c242q")
text = "SELL"

[node name="MenuSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_hldvi")
max_polyphony = 10000

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="tab_changed" from="Control/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="mouse_entered" from="Control/TabContainer/PATH1/Buttons/LVL1" to="." method="_on_lvl_1_mouse_entered"]
[connection signal="pressed" from="Control/TabContainer/PATH1/Buttons/LVL1" to="." method="_on_lvl_1_pressed" binds= ["PATH1"]]
[connection signal="mouse_entered" from="Control/TabContainer/PATH1/Buttons/LVL2" to="." method="_on_lvl_2_mouse_entered"]
[connection signal="pressed" from="Control/TabContainer/PATH1/Buttons/LVL2" to="." method="_on_lvl_2_pressed" binds= ["PATH1"]]
[connection signal="mouse_entered" from="Control/TabContainer/PATH1/Buttons/LVL3" to="." method="_on_lvl_3_mouse_entered"]
[connection signal="pressed" from="Control/TabContainer/PATH1/Buttons/LVL3" to="." method="_on_lvl_3_pressed" binds= ["PATH1"]]
[connection signal="mouse_entered" from="Control/TabContainer/PATH2/Buttons/LVL1" to="." method="_on_lvl_1_mouse_entered"]
[connection signal="pressed" from="Control/TabContainer/PATH2/Buttons/LVL1" to="." method="_on_lvl_1_pressed" binds= ["PATH2"]]
[connection signal="mouse_entered" from="Control/TabContainer/PATH2/Buttons/LVL2" to="." method="_on_lvl_2_mouse_entered"]
[connection signal="pressed" from="Control/TabContainer/PATH2/Buttons/LVL2" to="." method="_on_lvl_2_pressed" binds= ["PATH2"]]
[connection signal="mouse_entered" from="Control/TabContainer/PATH2/Buttons/LVL3" to="." method="_on_lvl_3_mouse_entered"]
[connection signal="pressed" from="Control/TabContainer/PATH2/Buttons/LVL3" to="." method="_on_lvl_3_pressed" binds= ["PATH2"]]
[connection signal="pressed" from="Control/SellButton" to="." method="_on_sell_button_pressed"]
